# monet

./: .gitignore  CMakeLists.txt  Interpreter.cpp  Interpreter.h  LICENSE  Memory.h  README.md  main.cpp  todo.md
doc/Core/: Functions.txt
doc/Examples/: FunctionalLibExample.mo  HelloWorld.mo  InteractiveHttpClient.mo  InteractiveTCPClient.mo  InteractiveUDPSender.mo  ListAndFiles.mo  LoadExample.txt  UDPReceiver.mo  httpexample.mo
doc/File/: Functions.txt
doc/Functional/: Functions.txt
doc/Math/: Functions.txt
doc/Time/: Functions.txt
doc/core/: corefunctions.txt
include/: Exception.h  Interpreter.h  Memory.h
lib/: File.cpp  File.h  Library.h
lib/File/: File.cpp  File.h
lib/Functional/: Functional.cpp  Functional.h
lib/HTTP/: HTTP.cpp  HTTP.h
lib/List/: List.cpp  List.h
lib/Math/: Math.cpp  Math.h
lib/TCP/: TCP.cpp  TCP.h
lib/Time/: Time.cpp  Time.h
lib/UDP/: UDP.cpp  UDP.h
src/: CMakeLists.txt  Exception.cpp  Exception.h  Interpreter.cpp  Interpreter.h  Memory.cpp  Memory.h  main.cpp
test/Benchmark/Fib/: Fib.mo  Fib.py
test/unit/printing/: print.mo  print.txt
